--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "vue3-easy-data-table": "^1.4.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.0.0",
     "@vitest/coverage-c8": "^0.22.1",
+    "@vue/test-utils": "^2.0.2",
     "jsdom": "^20.0.0",
     "vite": "^3.0.0",
     "vitest": "^0.22.1"
