--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vueuse/core": "^9.3.0",
     "less": "^4.1.3",
     "vue": "^3.2.37",
     "vue-draggable-next": "^2.1.1",
