--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
        with:
          node-version: latest
      - name: Install    
-       run: yarn dev
+       run: yarn
       
   testing:     
     runs-on: ubuntu-latest
