--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -29,6 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
+    needs: [tests]
     steps:
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
