--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -31,6 +31,9 @@ jobs:
     
     needs: [tests]
     steps:
+     - name: Git clone to repo
+       uses: actions/checkout@v2.5.0
+       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
        with:
