start package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "coverage": "vitest run --coverage",
