--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "less": "^4.1.3",
     "vue": "^3.2.37",
     "vue-draggable-next": "^2.1.1",
-    "vue3-easy-data-table": "^1.4.5"
+    "vue3-easy-data-table": "^1.4.5",
+		"vite": "^3.0.0"
   },
   "devDependencies": {
     "@testing-library/vue": "^6.6.1",
@@ -36,7 +37,6 @@
     "@vitest/coverage-c8": "^0.22.1",
     "@vue/test-utils": "^2.0.2",
     "jsdom": "^20.0.0",
-    "vite": "^3.0.0",
     "vitest": "^0.22.1"
   }
 }
