--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -34,6 +34,14 @@ jobs:
      - name: Git clone to repo
        uses: actions/checkout@v2.5.0
        
+     - name: Setup node
+       uses: actions/setup-node@v3
+       with:
+         node-version: latest  
+       
+     - name: Install    
+       run: yarn 
+       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
        with:
