--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -33,22 +33,14 @@ jobs:
     steps:
      - name: Git clone to repo
        uses: actions/checkout@v2.5.0
-       
-     - name: Setup node
-       uses: actions/setup-node@v3
-       with:
-         node-version: latest  
-       
-     - name: Install    
-       run: yarn 
-       
+      
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
        with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_email: ${{secrets.HEROKU_EMAIL}}
         heroku_app_name: ${{secrets.HEROKU_APP}}
-       
+        procfile: "web: npm run start"
 
        
  
