--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -33,6 +33,9 @@ jobs:
     steps:
      - name: Git clone to repo
        uses: actions/checkout@v2.5.0
+     
+     - name: Docker
+       run: docker-compose up
       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
