--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -37,7 +37,7 @@ jobs:
      - name: Docker  
        uses: isbang/compose-action@v1.3.2   
        with:
-         compose-file: "../../docker-compose.yml"
+         compose-file: "docker-compose.yml"
       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
