--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -35,9 +35,7 @@ jobs:
        uses: actions/checkout@v2.5.0
        
      - name: Docker  
-       uses: isbang/compose-action@v1.3.2   
-       with:
-         compose-file: "docker-compose.yml"
+       run: docker-compose up 
       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
