--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -8,34 +8,35 @@ on:
      - main
     
 jobs:
-  tests:
-    runs-on: ubuntu-latest
+#   tests:
+#     runs-on: ubuntu-latest
     
-    steps:
-     - name: Git clone to repo
-       uses: actions/checkout@v2.5.0
+#     steps:
+#      - name: Git clone to repo
+#        uses: actions/checkout@v2.5.0
        
-     - name: Setup node
-       uses: actions/setup-node@v3
-       with:
-         node-version: latest
+#      - name: Setup node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: latest
          
-     - name: Install    
-       run: yarn
+#      - name: Install    
+#        run: yarn
       
-     - name: Tests
-       run: yarn coverage
+#      - name: Tests
+#        run: yarn coverage
+       
        
   deploy:
     runs-on: ubuntu-latest
     
-    needs: [tests]
+#     needs: [tests]
     steps:
      - name: Git clone to repo
        uses: actions/checkout@v2.5.0
        
      - name: Docker  
-       run: docker-compose up 
+       run: docker-compose up -d
       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
