--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -36,7 +36,7 @@ jobs:
        uses: actions/checkout@v2.5.0
        
      - name: Docker  
-       run: docker-compose up -d
+       run:  docker-compose -f "docker-compose.yml" up -d --build
       
      - name: Deploy to Heroku
        uses: AkhileshNS/heroku-deploy@v3.12.12
