--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "start":"vite",
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -27,10 +27,10 @@
     "@vueuse/core": "^9.3.0",
     "editorconfig": "^1.0.0",
     "less": "^4.1.3",
+    "vite": "^3.0.0",
     "vue": "^3.2.37",
     "vue-draggable-next": "^2.1.1",
-    "vue3-easy-data-table": "^1.4.5",
-		"vite": "^3.0.0"
+    "vue3-easy-data-table": "^1.4.5"
   },
   "devDependencies": {
     "@testing-library/vue": "^6.6.1",
